<resources>
    <string name="app_name">H071211017 - Final Mobile</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="favorites">Favorites</string>
    <string name="please_check_your_internet_connection">Please check your internet connection!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="now_playing">Now Playing</string>
    <string name="show_all">Show All</string>
    <string name="poster">Poster</string>
    <string name="popular">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="airing_today">Airing Today</string>
    <string name="on_the_air">On The Air</string>
    <string name="popular_tv_shows">Popular TV Shows</string>
    <string name="top_rated_tv_shows">Top Rated TV Shows</string>
    <string name="genre">Genre</string>
    <string name="original_language">Original language</string>
    <string name="_18">18+</string>
    <string name="release_date">Release date</string>
    <string name="overview">Overview</string>
    <string name="backdrop">backdrop</string>
    <string name="duration">Duration</string>
    <string name="name">Name</string>
    <string name="casts">Casts</string>
    <string name="refresh">refresh</string>
    <string name="belum_ada_film_atau_series_favorite">Belum ada film atau series favorite~</string>
    <string name="hasil_pencarian_tidak_ada">Hasil pencarian tidak ada!</string>
    <string name="sort">Sort</string>
    <string name="by_title">By title</string>
    <string name="by_year">By year</string>
    <string name="please_check_your_connection">Please check your connection!</string>
    <string name="moviehub">MovieHub</string>
</resources>