<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MoviesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Now Playing -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="16dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content"
                        android:text="@string/now_playing"/>
                    <TextView
                        android:id="@+id/tv_show_all"
                        android:layout_width="62dp"
                        android:layout_height="wrap_content"
                        android:textSize="11sp"
                        android:textColor="@color/black"
                        android:text="@string/show_all"
                        app:drawableRightCompat="@drawable/arrow_right"/>
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_now_playing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    tools:listitem="@layout/h_list_layout"
                    tools:itemCount="10"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
            </LinearLayout>

            <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

            <!--Popular -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="16dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content"
                        android:text="@string/popular"/>
                    <TextView
                        android:id="@+id/tv_show_all_popular"
                        android:layout_width="62dp"
                        android:layout_height="wrap_content"
                        android:textSize="11sp"
                        android:textColor="@color/black"
                        android:text="@string/show_all"
                        app:drawableRightCompat="@drawable/arrow_right"/>
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_popular"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="3"
                    tools:listitem="@layout/v_list_layout" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <!-- Top Rated -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="16dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content"
                        android:text="@string/top_rated_movies"/>
                    <TextView
                        android:id="@+id/tv_show_all_top_rated"
                        android:layout_width="62dp"
                        android:layout_height="wrap_content"
                        android:textSize="11sp"
                        android:textColor="@color/black"
                        android:text="@string/show_all"
                        app:drawableRightCompat="@drawable/arrow_right"/>
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_top_rated"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginBottom="8dp"
                    tools:listitem="@layout/v_list_layout"
                    tools:itemCount="3"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <!-- Upcoming -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="16dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content"
                        android:text="@string/upcoming_movies"/>
                    <TextView
                        android:id="@+id/tv_show_all_upcoming"
                        android:layout_width="62dp"
                        android:layout_height="wrap_content"
                        android:textSize="11sp"
                        android:textColor="@color/black"
                        android:text="@string/show_all"
                        app:drawableRightCompat="@drawable/arrow_right"/>
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_upcoming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    tools:listitem="@layout/h_list_layout_2"
                    tools:itemCount="3"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>